# auth0-support

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs
src/auth/: auth.rs  crypt.rs  mod.rs  redirect_to_login.rs
src/config/: config.rs
src/errors/: errors.rs
src/middlewares/: after.rs  before.rs  mod.rs
src/traits/: claims_trait.rs  mod.rs
src/utils/: jwks.rs  mod.rs  utils.rs
tests/: auth_test.rs
