[package]
name = "auth0-support"
version = "0.1.0"
edition = "2021"
authors = ["Akira Kano <a.kano1101@gmail.com>"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
axum-server = "0.7.1"
base64-compat = "1.0.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.4", features = ["make", "util"] }
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.83"
thiserror = "1.0.69"
headers = "0.4.0"
http = "1.2.0"
http-body-util = "0.1.2"
tower-cookies = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter", "time", "local-time"] }
hyper = "1.6.0"
serial_test = "3.2.0"

[dev-dependencies]
wiremock = "0.6.2"
